# verilog_env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pre_validation_script.sh  pyproject.toml
graders/: __init__.py  grader_base.py  grader_task_1.py  grader_task_2.py  grader_task_3.py
server/: __init__.py  app.py  environment.py  observation.py  reward.py  state_manager.py
server/tool_wrappers/: __init__.py  compile_lint.py  constraint_adjuster.py  metrics.py  path_security.py  rtl_modifier.py  simulation.py  synthesis.py  timing.py
tasks/task_1/baseline_rtl/: alu.v
tasks/task_1/constraints/: alu.sdc
tasks/task_1/hidden_tests/: tb_alu_exhaustive.v
tasks/task_1/testbenches/: tb_alu.v
tasks/task_2/baseline_rtl/: pipeline.v
tasks/task_2/constraints/: pipeline.sdc
tasks/task_2/hidden_tests/: tb_pipeline_exhaustive.v
tasks/task_2/testbenches/: tb_pipeline.v
tasks/task_3/baseline_rtl/: mem_ctrl.v
tasks/task_3/constraints/: mem_ctrl.sdc
tasks/task_3/hidden_tests/: tb_mem_ctrl_exhaustive.v
tasks/task_3/testbenches/: tb_mem_ctrl.v
tests/: test_environment.py  test_graders.py  test_reward.py
